[package]
name = "netfwd"
version = "0.1.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
tokio = { version = "0.2", features = ["dns", "io-util", "macros", "tcp"] }
